@@ -12,6 +12,10 @@ Sidekiq.configure_server do |config|
     url: resque_url,
     namespace: 'resque:gitlab'
   }
+
+  config.server_middleware do |chain|
+    chain.add Gitlab::SidekiqMiddleware::ArgumentsLogger
+  end
 end
 
 Sidekiq.configure_client do |config|
